Fix undefined default values, now all starts with 0

--- a/plrpg.html
+++ b/plrpg.html
@@ -21,13 +21,13 @@
 	  <input type="text"
 		 placeholder="0"
 		 class="member-input"
-		 value="<%= modifier ? modifier : '' %>"/>
+		 value="<%= modifier ? modifier : 0 %>"/>
 	</td>
 	<td class="admin-only">
 	  <input type="text"
 		 placeholder="0"
 		 class="member-input"
-		 value="<%= card_modifier ? card_modifier : '' %>"/>
+		 value="<%= card_modifier ? card_modifier : 0 %>"/>
 	</td>
 	<td class="admin-only">
 	  <span class="member-day-progress">
